MNEE caustics don't render with specific materials when Filter Glossy = 0 #97056

Closed
opened 2022-04-05 06:02:53 +02:00 by Alaska · 17 comments
Member

System Information
Operating system: Linux-5.16.0-5-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-05 02:29, hash: 8333b681a7
Worked: Never as this feature was introduced recently

Short description of error
MNEE caustics won't render for Glass BSDF or Refraction BSDF with a roughness of 0 if Filter Glossy is equal to 0

Exact steps for others to reproduce the error

  1. Change the render engine to Cycles.
  2. Setup MNEE caustics by setting up a Caustic Caster, Caustic Receiver, and Shadow Caustic light.
  3. Give the Caustic Caster a Glass BSDF or Refraction BSDF with roughness set to 0.
  4. Notice that caustics are being cast from the Caustic Caster onto the Caustic Receiver
  5. In {nav Render Properties > Light Paths > Caustics} change Filter Glossy to 0 and notice that the caustics have disappeared.
  6. Increase the roughness of the material and notice the caustics return. Changing the material out for a Principled BSDF setup to act like glass also resolves the issue.

Based on these observations, it seems MNEE caustics don't work if you're using a casutics caster with a Glass BSDF or Refraction BSDF with a roughness of 0 and Filter Glossy of 0.
If the roughness is higher than 0, then MNEE caustics work.
If Filter Glossy is higher then 0, then MNEE caustics work.
If the material is a Principled BSDF, then MNEE caustics work.

Here is a file with steps 1-5 done for you:
#97056 - MNEE caustics and filter glossy bug.blend

**System Information** Operating system: Linux-5.16.0-5-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-05 02:29, hash: `8333b681a7` Worked: Never as this feature was introduced recently **Short description of error** MNEE caustics won't render for `Glass BSDF` or `Refraction BSDF` with a roughness of `0` if `Filter Glossy` is equal to `0` **Exact steps for others to reproduce the error** 1. Change the render engine to Cycles. 2. Setup MNEE caustics by setting up a `Caustic Caster`, `Caustic Receiver`, and `Shadow Caustic` light. 3. Give the `Caustic Caster` a `Glass BSDF` or `Refraction BSDF` with roughness set to `0`. 4. Notice that caustics are being cast from the `Caustic Caster` onto the `Caustic Receiver` 5. In {nav Render Properties > Light Paths > Caustics} change `Filter Glossy` to `0` and notice that the caustics have disappeared. 6. Increase the roughness of the material and notice the caustics return. Changing the material out for a `Principled BSDF` setup to act like glass also resolves the issue. Based on these observations, it seems MNEE caustics don't work if you're using a casutics caster with a `Glass BSDF` or `Refraction BSDF` with a roughness of `0` and `Filter Glossy` of `0`. If the roughness is higher than `0`, then MNEE caustics work. If `Filter Glossy` is higher then `0`, then MNEE caustics work. If the material is a `Principled BSDF`, then MNEE caustics work. Here is a file with steps 1-5 done for you: [#97056 - MNEE caustics and filter glossy bug.blend](https://archive.blender.org/developer/F12972685/T97056_-_MNEE_caustics_and_filter_glossy_bug.blend)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Alaska changed title from MNEE caustics don't render with specific materials and when Filter Glossy = 0 to MNEE caustics don't render with specific materials when Filter Glossy = 0 2022-04-05 06:04:39 +02:00
Author
Member

Added subscriber: @olivier.fx

Added subscriber: @olivier.fx
Author
Member
CC @olivier.fx
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Following the policy of "bug in new feature = high prio", will raise priority

Following the policy of "bug in new feature = high prio", will raise priority

This issue was referenced by 110eb23005

This issue was referenced by 110eb2300526519681b44e154473b5fd087d191e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-04-28 18:00:21 +02:00

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

I used the wrong bug number in the commit, reopening.

I used the wrong bug number in the commit, reopening.
Brecht Van Lommel removed their assignment 2022-04-28 18:01:41 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

@olivier.fx, is this something you plan to look into? Or need help with a design / implementation question?

@olivier.fx, is this something you plan to look into? Or need help with a design / implementation question?

I'm taking a look now @brecht. I believe this has to do with adding support for CLOSURE_BSDF_REFRACTION_ID and CLOSURE_BSDF_SHARP_GLASS_ID bsdfs (raising the roughness slightly will bring the caustics back).

I'm taking a look now @brecht. I believe this has to do with adding support for CLOSURE_BSDF_REFRACTION_ID and CLOSURE_BSDF_SHARP_GLASS_ID bsdfs (raising the roughness slightly will bring the caustics back).

With D14901, I now get a caustic for all 3 sharp bsdfs, includinh for example the glass bsdf with roughness 0:
image.png

With [D14901](https://archive.blender.org/developer/D14901), I now get a caustic for all 3 sharp bsdfs, includinh for example the glass bsdf with roughness 0: ![image.png](https://archive.blender.org/developer/F13063040/image.png)

This issue was referenced by dc55e095e6

This issue was referenced by dc55e095e6f2836c65f83c9b1bad2f7d9d98022d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-05-10 19:22:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97056
No description provided.