Fix T97056: Cycles MNEE caustics treated as direct instead of indirect light

This fixes wrong render passs and bounce limits.

Differential Revision: https://developer.blender.org/D14737